2007-06-22  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/Examples/WrapMode.xml: Added markup for empty elements
	* DocumentBufferArchiver.cs: Added case in Deserialize for empty
	  elements.

2007-06-22  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/TestDocumentBufferArchiver.cs, Monodoc.Editor.Gui.mdp: Added
	  Test for DocumentBufferArchiver, added a test for Serialize method.
	* Test/Examples/WrapMode.xml: Removed all empty elements that we are
	  not creating for the time being.

2007-06-22  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/TestDocumentBufferArchiver.cs, Monodoc.Editor.Gui.mdp: Added
	  Test for DocumentBufferArchiver, added a test for Serialize method.
	* Test/Examples/WrapMode.xml: Removed all empty elements that we are
	  not creating for the time being.

2007-06-22  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test, Test/Examples, Test/Examples/WrapMode.xml,
	  Monodoc.Editor.Gui.mdp: Adding testing framework to
	  Monodoc.Editor.Gui.

2007-06-22  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Using DocumentTag properties to guide the
	  serialization of the buffer.

2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Minor changes.
	* DocumentTagTable.cs: Using DocumentTag to define the tags used in the
	  editor, and toggle if they are elements, attributes or has text
	  child nodes.
	* DocumentTag.cs: By default DocumentTags are non Editable.

2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Minor changes.
	* Monodoc.Editor.Gui.mdp, DocumentTag.cs: Added DocumentTag class that
	  inherits from TextTag. It implements some properties that tells if
	  the tag represents an element, an attribute or is a text element.

2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs: Continue with the implementation of the