@@ -27,6 +27,7 @@
     <File name="./Test/Examples" subtype="Directory" buildaction="Compile" />
     <File name="./Test/Examples/WrapMode.xml" subtype="Code" buildaction="Nothing" />
     <File name="./Test/TestDocumentBufferArchiver.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Test/Examples/WindowType.xml" subtype="Code" buildaction="Nothing" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
