@@ -1,0 +1,56 @@
+<Type Name="WindowType" FullName="Gtk.WindowType">
+  <TypeSignature Language="C#" Maintainer="Duncan Mak" Value="public enum WindowType" />
+  <AssemblyInfo>
+    <AssemblyName>gtk-sharp</AssemblyName>
+    <AssemblyPublicKey />
+    <AssemblyVersion>2.10.0.0</AssemblyVersion>
+  </AssemblyInfo>
+  <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
+  <Docs>
+    <summary>The type of <see cref="T:Gtk.Window" /></summary>
+    <remarks>
+      <para>
+		A <see cref="T:Gtk.Window" /> can be one of these types.
+		Most things you would consider a "window" should have type <see cref="T:Gtk.WindowType.TopLevel" /> ;
+		windows with this type are managed by the window manager and have a frame by default (call <see cref="P:Gtk.Window.Decorated" /> to toggle the frame).
+		Windows with type <see cref="T:Gtk.Window.Popup" /> are ignored by the window manager;
+		window manager keybindings will not work on them, the window manager will not decorate the window with a frame, many GTK+ features that rely on the window manager will not work (e.g. resize grips and maximization/minimization).</para>
+      <para>
+        <see cref="T:Gtk.WindowType.Popup" /> is used to implement widgets such as <see cref="T:Gtk.Menu" /> or tooltips that you normally do not think of as windows per se. Nearly all windows should be <see cref="T:Gtk.Window.Toplevel" />. In particular, do not use <see cref="T:Gtk.Window.Popup" /> just to turn off the window borders; use <see cref="P:Gtk.Window.Decorated" /> for instead.</para>
+    </remarks>
+  </Docs>
+  <Base>
+    <BaseTypeName>System.Enum</BaseTypeName>
+  </Base>
+  <Attributes>
+    <Attribute>
+      <AttributeName>GLib.GType(typeof(Gtk.WindowTypeGType))</AttributeName>
+    </Attribute>
+  </Attributes>
+  <Members>
+    <Member MemberName="Toplevel">
+      <MemberSignature Language="C#" Value="Toplevel" />
+      <MemberType>Field</MemberType>
+      <ReturnValue>
+        <ReturnType>Gtk.WindowType</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>A regular window, such as a dialog.</summary>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName="Popup">
+      <MemberSignature Language="C#" Value="Popup" />
+      <MemberType>Field</MemberType>
+      <ReturnValue>
+        <ReturnType>Gtk.WindowType</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>A special window such as a tooltip.</summary>
+        <remarks />
+      </Docs>
+    </Member>
+  </Members>
+</Type>
